test/integration/bad/tuples/stanc.expected
  $ ../../../../../install/default/bin/stanc array_literal_mismatch.stan
Semantic error in 'array_literal_mismatch.stan', line 2, column 43 to column 52:
   -------------------------------------------------
     1:  transformed data {
     2:    array[2] tuple(real, real) x = {(1, 2) , (3, 4, 5)};
                                                    ^
     3:  }
   -------------------------------------------------

Array expression must have entries of consistent type. Expected tuple(
int, int) but found tuple(int, int, int).
  $ ../../../../../install/default/bin/stanc bad-arg.stan
Syntax error in 'bad-arg.stan', line 2, column 23 to column 27, parsing error:
   -------------------------------------------------
     1:  functions {
     2:    void foo(tuple(real, data real) x) {
                                ^
     3:      print(x.1);
     4:    }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple type.
  $ ../../../../../install/default/bin/stanc bad-index1.stan
Semantic error in 'bad-index1.stan', line 3, column 9 to column 12:
   -------------------------------------------------
     1:  transformed data {
     2:     real x = 3.4;
     3:     print(x.1);
                  ^
     4:  }
   -------------------------------------------------

Tried to index a non-tuple type. Expression has type real.
  $ ../../../../../install/default/bin/stanc bad-index2.stan
Semantic error in 'bad-index2.stan', line 3, column 11 to column 17:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, real) pair = (3.14, 34.2);
     3:    real x = pair.3;
                    ^
     4:  }
   -------------------------------------------------

Tried to access index 3 for a tuple of length 2.
Only indices indices between 1 and 2 are valid.
  $ ../../../../../install/default/bin/stanc bad-index3.stan
Semantic error in 'bad-index3.stan', line 3, column 3 to column 6:
   -------------------------------------------------
     1:  transformed data {
     2:     real x = 3.14;
     3:     x.1 = 6.28;
            ^
     4:  }
   -------------------------------------------------

Tried to index a non-tuple type. Expression has type real.
  $ ../../../../../install/default/bin/stanc bad-index4.stan
Semantic error in 'bad-index4.stan', line 3, column 2 to column 8:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, real) pair = (3.14, 34.2);
     3:    pair.3 = 6.28;
           ^
     4:  }
   -------------------------------------------------

Tried to access index 3 for a tuple of length 2.
Only indices indices between 1 and 2 are valid.
  $ ../../../../../install/default/bin/stanc bad-index5.stan
Semantic error in 'bad-index5.stan', line 3, column 11 to column 18:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, real) pair = (3.14, 34.2);
     3:    real x = pair[1];
                    ^
     4:  }
   -------------------------------------------------

Too many indexes, expression dimensions=0, indexes found=1.
  $ ../../../../../install/default/bin/stanc bad_addition.stan
Semantic error in 'bad_addition.stan', line 3, column 2 to column 3:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, real) z;
     3:    z += 1;
           ^
     4:  }
   -------------------------------------------------

Ill-typed arguments supplied to assignment operator +=:
The left hand side has type
  tuple(real, real)
and the right hand side has type
  int
Available signatures for given lhs:
No matching signatures
  $ ../../../../../install/default/bin/stanc bad_unpack_duplicates.stan
Semantic error in 'bad_unpack_duplicates.stan', line 5, column 2 to column 14:
   -------------------------------------------------
     3:    int y = 4;
     4:  
     5:    (x, y, x, y) = (y, x, y, x);
           ^
     6:  }
   -------------------------------------------------

The same value cannot be assigned to multiple times in one assignment:
  x, y
  $ ../../../../../install/default/bin/stanc bad_unpack_fn_type.stan
Semantic error in 'bad_unpack_fn_type.stan', line 4, column 4 to column 24:
   -------------------------------------------------
     2:    int foo() {
     3:      int x;
     4:      (foo, x) = (foo, 1);
             ^
     5:      return x;
     6:    }
   -------------------------------------------------

Cannot assign a function type '() => int' to variable 'foo'.
  $ ../../../../../install/default/bin/stanc bad_unpack_global.stan
Semantic error in 'bad_unpack_global.stan', line 8, column 3 to column 4:
   -------------------------------------------------
     6:     int y;
     7:  
     8:    (x,y) = (1,2);
            ^
     9:  
    10:  }
   -------------------------------------------------

Cannot assign to global variable 'x' declared in previous blocks.
  $ ../../../../../install/default/bin/stanc bad_unpack_lhs.stan
Syntax error in 'bad_unpack_lhs.stan', line 4, column 2 to column 15, parsing error:
   -------------------------------------------------
     2:    int x = 3;
     3:    real y = 4.0;
     4:    (x, y).1 = 2; // allowing this feels very silly and would complicate implementation
           ^
     5:  }
   -------------------------------------------------

Expected an assignable value but found a general expression.
  $ ../../../../../install/default/bin/stanc bad_unpack_overlap1.stan
Semantic error in 'bad_unpack_overlap1.stan', line 9, column 2 to column 30:
   -------------------------------------------------
     7:    // we disallow this because it's not obvious if unique
     8:    // locations are being assigned to
     9:    (x_flat[ : 3], x_flat[3 : ]) = x;
           ^
    10:  }
   -------------------------------------------------

The same value cannot be assigned to multiple times in one assignment:
  x_flat[...]
  $ ../../../../../install/default/bin/stanc bad_unpack_overlap2.stan
Semantic error in 'bad_unpack_overlap2.stan', line 4, column 2 to column 22:
   -------------------------------------------------
     2:    int i = 1, j = 1;
     3:    array[1] tuple(int, int) tup;
     4:    (tup[i].1, tup[j].1) = (1, 2);
           ^
     5:  }
   -------------------------------------------------

The same value cannot be assigned to multiple times in one assignment:
  tup[...].1
  $ ../../../../../install/default/bin/stanc bad_unpack_read_write.stan
Semantic error in 'bad_unpack_read_write.stan', line 4, column 2 to column 11:
   -------------------------------------------------
     2:    int x = 1;
     3:    vector[2] y = [1, 1]';
     4:    (x, y[x]) = (2, 2);
           ^
     5:  }
   -------------------------------------------------

The same variable cannot be both assigned to and read from on the left hand side of an assignment:
  x
  $ ../../../../../install/default/bin/stanc bad_unpack_read_write2.stan
Semantic error in 'bad_unpack_read_write2.stan', line 4, column 2 to column 15:
   -------------------------------------------------
     2:    tuple(int,int) x2 = (1,1);
     3:    vector[2] y = [1, 1]';
     4:    (x2, y[x2.1]) = ((1,1), 2);
           ^
     5:  }
   -------------------------------------------------

The same variable cannot be both assigned to and read from on the left hand side of an assignment:
  x2
  $ ../../../../../install/default/bin/stanc bad_unpack_read_write3.stan
Semantic error in 'bad_unpack_read_write3.stan', line 6, column 2 to column 17:
   -------------------------------------------------
     4:    // one could imagine allowing this case,
     5:    // but it is both an edge case and very complicated to do so
     6:    (x2.1, y[x2.2]) = (2, 2);
           ^
     7:  }
   -------------------------------------------------

The same variable cannot be both assigned to and read from on the left hand side of an assignment:
  x2
  $ ../../../../../install/default/bin/stanc bad_unpack_shape.stan
Semantic error in 'bad_unpack_shape.stan', line 4, column 2 to column 8:
   -------------------------------------------------
     2:    int x = 3;
     3:    int y = 4;
     4:    (x, y) = (y, x, x);
           ^
     5:  }
   -------------------------------------------------

Ill-typed arguments supplied to assignment operator =:
The left hand side has type
  tuple(int, int)
and the right hand side has type
  tuple(int, int, int)
  $ ../../../../../install/default/bin/stanc bad_unpack_tuple_overlap1.stan
Semantic error in 'bad_unpack_tuple_overlap1.stan', line 3, column 2 to column 16:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, tuple(int, real)) tup;
     3:    (tup.2.2, tup) = (1.5, (2.3, (4,5.5)));
           ^
     4:  }
   -------------------------------------------------

The same value cannot be assigned to multiple times in one assignment:
  tup.2.2
  $ ../../../../../install/default/bin/stanc bad_unpack_tuple_overlap2.stan
Semantic error in 'bad_unpack_tuple_overlap2.stan', line 3, column 2 to column 17:
   -------------------------------------------------
     1:  generated quantities {
     2:    array[1] tuple(int, int) tup;
     3:    (tup, tup[1].1) = ({(1, 2)}, 3);
           ^
     4:  }
   -------------------------------------------------

The same value cannot be assigned to multiple times in one assignment:
  tup[...].1
  $ ../../../../../install/default/bin/stanc bad_unpack_types.stan
Semantic error in 'bad_unpack_types.stan', line 4, column 6 to column 7:
   -------------------------------------------------
     2:    real x = 3.0;
     3:    int y = 4;
     4:    (x, y) = (y, x);
               ^
     5:  }
   -------------------------------------------------

Ill-typed arguments supplied to assignment operator =:
The left hand side has type
  int
and the right hand side has type
  real
  $ ../../../../../install/default/bin/stanc empty_tuple_expr.stan
Syntax error in 'empty_tuple_expr.stan', line 2, column 25 to column 26, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, real) y = ();
                                  ^
     3:  }
   -------------------------------------------------

Expression or comma separated list of expressions followed by ")" expected after "(".
  $ ../../../../../install/default/bin/stanc empty_tuple_type.stan
Syntax error in 'empty_tuple_type.stan', line 2, column 8 to column 9, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple() y = ();
                 ^
     3:  }
   -------------------------------------------------

Incomplete type declaration. Expected comma separated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc fn-assign.stan
Semantic error in 'fn-assign.stan', line 4, column 4 to column 17:
   -------------------------------------------------
     2:    int foo() {
     3:      tuple(real, int) x;
     4:      x = (foo, 1);
             ^
     5:      return x.2;
     6:    }
   -------------------------------------------------

Cannot assign a function type '() => int' to variable 'x'.
  $ ../../../../../install/default/bin/stanc function-mismatch1.stan
Semantic error in 'function-mismatch1.stan', line 8, column 2 to column 17:
   -------------------------------------------------
     6:  
     7:  model {
     8:    foo((1, 2, 3));
           ^
     9:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(int, int, int))
Available signatures:
(tuple(real, real)) => void
  The first argument must be tuple(real, real) but got tuple(int, int, int)
  $ ../../../../../install/default/bin/stanc fuzz-tuple-idx1.stan
Syntax error in 'fuzz-tuple-idx1.stan', line 1, column 36 to column 58, parsing error:
   -------------------------------------------------
     1:  functions{void f(tuple(matrix,int)t)t.40000000000000000000
                                             ^
   -------------------------------------------------

Failed to parse integer from string '.40000000000000000000' in tuple index. 
The index is likely too large.
  $ ../../../../../install/default/bin/stanc fuzz-tuple-idx2.stan
Syntax error in 'fuzz-tuple-idx2.stan', line 1, column 61 to column 83, parsing error:
   -------------------------------------------------
     1:  transformed data{tuple(array[0]tuple(int,array[0]real),int)x;x.10000000000000000000
                                                                      ^
   -------------------------------------------------

Failed to parse integer from string '.10000000000000000000' in tuple index. 
The index is likely too large.
  $ ../../../../../install/default/bin/stanc fuzz-tuple-idx3.stan
Syntax error in 'fuzz-tuple-idx3.stan', line 1, column 45 to column 66, parsing error:
   -------------------------------------------------
     1:  transformed data{matrix[0,0]v;row_vector[0]m;m.6000000000000000000
                                                      ^
   -------------------------------------------------

Failed to parse integer from string '.6000000000000000000' in tuple index. 
The index is likely too large.
  $ ../../../../../install/default/bin/stanc incomplete1.stan
Syntax error in 'incomplete1.stan', line 2, column 30 to column 35, parsing error:
   -------------------------------------------------
     1:  data {
     2:    tuple( array [ foo ] real , while
                                       ^
   -------------------------------------------------

Incomplete type specification, expected further types followed by ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete2.stan
Syntax error in 'incomplete2.stan', line 1, column 33 to column 36, parsing error:
   -------------------------------------------------
     1:  data { tuple( array [ foo ] real foo
                                          ^
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete3.stan
Syntax error in 'incomplete3.stan', line 2, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  model { tuple( complex , complex ) foo,
         ^
   -------------------------------------------------

Expected a new identifier after comma in declaration.
All variables declared must be of the same type, and any initializing assignment must follow the identifier before the next comma.
  $ ../../../../../install/default/bin/stanc incomplete4.stan
Syntax error in 'incomplete4.stan', line 2, column 45 to column 50, parsing error:
   -------------------------------------------------
     1:  data {
     2:      tuple( real , tuple( complex , complex ) while
                                                      ^
   -------------------------------------------------

Incomplete type specification. Expected either ")" or "," followed by
further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete5.stan
Syntax error in 'incomplete5.stan', line 1, column 14 to column 19, parsing error:
   -------------------------------------------------
     1:  data { tuple( while
                       ^
   -------------------------------------------------

Incomplete type declaration. Expected comma separated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc incomplete6.stan
Syntax error in 'incomplete6.stan', line 2, column 30 to column 31, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, int) x = (3.5, 4;
                                       ^
   -------------------------------------------------

Unexpected input after the conclusion of a valid expression.
You may be missing a "," between expressions, an operator, or a terminating "}", ")", "]", or ";".
  $ ../../../../../install/default/bin/stanc incomplete7.stan
Syntax error in 'incomplete7.stan', line 2, column 20 to column 21, parsing error:
   -------------------------------------------------
     1:  functions {
     2:     tuple(real, int, ) foo()
                             ^
     3:  }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple type.
  $ ../../../../../install/default/bin/stanc onepl_expr.stan
Syntax error in 'onepl_expr.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  model {
     2:    print((3.5,));
                      ^
     3:  }
   -------------------------------------------------

Expression or comma separated list of expressions followed by ")" expected after "(".
  $ ../../../../../install/default/bin/stanc onepl_type.stan
Syntax error in 'onepl_type.stan', line 2, column 22 to column 23, parsing error:
   -------------------------------------------------
     1:  functions {
     2:    void foo(tuple(real,) x) {
                               ^
     3:      return;
     4:    }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple type.
  $ ../../../../../install/default/bin/stanc onepl_type2.stan
Syntax error in 'onepl_type2.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real,) x;
                      ^
     3:  }
   -------------------------------------------------

Incomplete type specification, expected further types followed by ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc onepl_type_missing_comma.stan
Syntax error in 'onepl_type_missing_comma.stan', line 2, column 12 to column 13, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real) y = (1,);
                     ^
     3:  }
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad.stan
Semantic error in 'tuple-dataonly-ad.stan', line 13, column 12 to column 19:
   -------------------------------------------------
    11:  
    12:  model {
    13:    target += foo(ps);
                     ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad2.stan
Semantic error in 'tuple-dataonly-ad2.stan', line 17, column 12 to column 24:
   -------------------------------------------------
    15:  
    16:  model {
    17:    target += foo((x1,x2));
                     ^
    18:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple_ternary.stan
Semantic error in 'tuple_ternary.stan', line 2, column 25 to column 47:
   -------------------------------------------------
     1:  transformed data {
     2:     tuple(real, real) x = 1 ? (1, 2) : (3, 4, 5);
                                  ^
     3:  }
   -------------------------------------------------

Type mismatch in ternary expression, expression when true is: tuple(int, int); expression when false is: tuple(
int, int, int)
